...

    @IBAction func presentButtonDoubleTapped() {
        doModalPresentation(passthrough: true)
    }

    @IBAction func alertButtonTapped() {
        let alert = UIAlertController(title: "Alert", message: "", preferredStyle: .alert)
        alert.addAction(UIAlertAction.init(title: "OK", style: .default, handler: nil))
        (self.presentedViewController ?? self).present(alert, animated: true, completion: nil)
    }
}

private extension PresenterViewController {
...
